// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryItemBoundary when an error occurs renders an error message 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-display-1adg3ll"
    data-testid="category-item-error"
  >
    <div
      class="css-view-1dbjc4n r-display-1adg3ll"
      data-testid="category-item-error-image"
      style="background-color: rgb(218, 216, 222); height: 250px; width: 188px;"
    />
    <div
      class="css-view-1dbjc4n"
      data-testid="category-item-error-detail"
      style="padding: 5px 10px 5px 10px; width: 188px;"
    >
      <div
        class="css-text-76zvg2 css-textOneLine-bfa6kz r-fontWeight-vw2c0b r-textTransform-tsynxw"
        dir="auto"
        style="color: rgb(25, 23, 28); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
      >
        Oops! Something went wrong.
      </div>
      <div
        class="css-text-76zvg2 css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
         
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CategoryItemBoundary when things are fine renders 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-cursor-1loqt21 r-display-1adg3ll r-outlineStyle-1ny4l3l r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="category-item"
    tabindex="0"
  >
    <div
      aria-label="Fortnite"
      class="css-view-1dbjc4n r-display-1adg3ll r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      data-testid="category-item-image"
      style="background-color: rgb(218, 216, 222); height: 250px; width: 188px;"
    >
      <div
        class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
        style="background-image: url(categories/Fortnite-376x500.jpg);"
      />
      <img
        alt="Fortnite"
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="categories/Fortnite-376x500.jpg"
      />
    </div>
    <div
      class="css-view-1dbjc4n"
      data-testid="category-item-detail"
      style="padding: 5px 10px 5px 10px; width: 188px;"
    >
      <div
        aria-hidden="true"
        class="css-text-76zvg2 css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
        dir="auto"
        style="color: rgb(25, 23, 28); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
      >
        Fortnite
      </div>
      <div
        class="css-text-76zvg2 css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        {{count, number}} viewer
      </div>
    </div>
  </div>
</DocumentFragment>
`;
